syntax = "proto3";
package coreum.customparams.v1;

import "amino/amino.proto";
import "coreum/customparams/v1/params.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/CoreumFoundation/coreum/v2/x/customparams/types";
option (gogoproto.goproto_getters_all) = false;

// Msg defines the Msg service.
service Msg {
  // UpdateStakingParams is a governance operation that sets the staking parameter.
  // NOTE: all parameters must be provided.
  rpc UpdateStakingParams(MsgUpdateStakingParams) returns (EmptyResponse);
}

message MsgUpdateStakingParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "cosmos-sdk/MsgUpdateStakingParams";

  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // staking_params holds the parameters related to the staking module.
  StakingParams staking_params = 2 [(gogoproto.nullable) = false];
}

message EmptyResponse {}
